fix button text wrap

--- a/packages/dash-components/src/components/dash-button/dash-button.css
+++ b/packages/dash-components/src/components/dash-button/dash-button.css
@@ -53,8 +53,8 @@ a {
 
 :host([scale='s']) {
   .button {
-    height: var(--dash-spacing-6);
-    --dash-button-padding: var(--dash-spacing-half) var(--dash-spacing-1-half);
+    min-height: var(--dash-spacing-6);
+    --dash-button-padding: 0 var(--dash-spacing-1-half);
     font-size: var(--dash-font-size-1);
   }
 
@@ -66,7 +66,7 @@ a {
 
 :host([scale='l']) {
   .button {
-    height: var(--dash-spacing-12);
+    min-height: var(--dash-spacing-12);
     --dash-button-padding: var(--dash-spacing-2) var(--dash-spacing-4);
     font-size: var(--dash-font-size-4);
   }
@@ -95,7 +95,7 @@ a {
   box-sizing: border-box;
   background-color: var(--dash-button-background-color);
   padding: var(--dash-button-padding);
-  height: var(--dash-spacing-8);
+  min-height: var(--dash-spacing-8);
   width: 100%;
   border-radius: var(--dash-border-radius);
   display: flex;
